# service_kg

./: Dockerfile  pyproject.toml
app/: api_registry.py
