[tool.poetry]
name = "service-kg"
version = "0.1.0"
description = ""
authors = ["Virtual Research Environment <vre-support@charite.de>"]
readme = "README.md"
packages = [{include = "service_kg"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.62.0"
fastapi-utils = "0.2.1"
uvicorn = "0.12.3"
gunicorn = "20.0.4"
pyjwt = "1.4.2"
python-multipart = "0.0.5"
python-json-logger = "0.1.11"
aiofiles = "0.6.0"
python-dotenv = "0.19.1"
pydantic = "1.8.2"
httpx = "0.22.0"
opentelemetry-exporter-jaeger = "1.6.2"
opentelemetry-instrumentation = "0.27b0"
opentelemetry-instrumentation-fastapi = "0.27b0"
opentelemetry-instrumentation-httpx = "0.27b0"
uvloop = "^0.17.0"
httptools = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
